--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -10,5 +10,6 @@
     <h1>This is my main Title</h1>
     <p>This is my paragraph</p>
     <h2>Sub Title</h2>
+    <p>This is another paragraph</p>
 </body>
 </html>
