Site plan added

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,8 +10,8 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
+    <h1> Blue Waters Rafting</h1>
+    <h2>Richard Kwenda</h2>
     <h2>WDD 130-[section]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
@@ -20,11 +20,32 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p> We take great care to listen to our clients to understand what their
+      needs. We have experienced the 'one size fits all' approach many times
+      ourselves. All aspects of our holidays are important, not just the
+      activities, or the location or even just the after activity downtime but
+      we appreciate each aspect has an integral part to play in the success of
+      the holiday experience.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p> College students, companies, schools, families and churches are the
+      primary target for this website.</p>
+      <p>
+        We offer trips to all people from their walks of life despite their
+        financial situation and everyone who is outgoing Most of our targets
+        they would want to spend sometime as teams doing water rafting, cycling
+        and nature walks
+      </p>
+      <p>
+        Our services are designed to cater for each group and their needs even
+        after water rafting, we also provide other activities for camping and
+        hiking
+      </p>
+      <p>
+        Our site is designed to be accessed on either desktop, laptop and mobile
+        device
+      </p>
     <!-- change this -->
 
     <hr />
@@ -67,11 +88,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Palo Alto
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Palo Alto
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
