--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -88,11 +88,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Palo Alto
+      Heading Font: Rock Salt
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Palo Alto
+      Paragraph Font: Roboto
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
