--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,18 +1,19 @@
 
+
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" >
 </head>
 
 <body>
   <header>
-    <h1> Blue Waters Rafting</h1>
-    <h2>Richard Kwenda</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>White Water Rafting</h1> Site Plan</h1>
+    <h2>Fortunate Kwenda</h2>
+    <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,32 +21,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p> We take great care to listen to our clients to understand what their
-      needs. We have experienced the 'one size fits all' approach many times
-      ourselves. All aspects of our holidays are important, not just the
-      activities, or the location or even just the after activity downtime but
-      we appreciate each aspect has an integral part to play in the success of
-      the holiday experience.</p>
+    <p>To help people understand more on rafting and show the activity which are available.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p> College students, companies, schools, families and churches are the
-      primary target for this website.</p>
-      <p>
-        We offer trips to all people from their walks of life despite their
-        financial situation and everyone who is outgoing Most of our targets
-        they would want to spend sometime as teams doing water rafting, cycling
-        and nature walks
-      </p>
-      <p>
-        Our services are designed to cater for each group and their needs even
-        after water rafting, we also provide other activities for camping and
-        hiking
-      </p>
-      <p>
-        Our site is designed to be accessed on either desktop, laptop and mobile
-        device
-      </p>
+    <p>This website targets all age group, but mainly focuses on adults since they are the ones who are financially stable and they are the ones who will want to take their families on vacation during holidays to rest from home and work. this site will be available on a variety of platforms so that it can be accessed anytime ad anywhere.</p>
     <!-- change this -->
 
     <hr />
@@ -75,10 +55,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">#bdc2bf</td>
+        <td class="secondary">#795663</td>
+        <td class="accent1">#ffd449</td>
+        <td class="accent2">#d8b4e2</td>
       </tr>
     </table>
 
@@ -88,11 +68,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Rock Salt
+      Heading Font:Times New Roman
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Roboto
+      Paragraph Font:Calibri
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
