changed html index

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,13 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <title>Whitewater Rafting Vacations</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
@@ -47,21 +49,6 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -85,5 +72,6 @@
             </a>
         </div>
     </footer>
+    </div>
 </body>
 </html>
